--- a/app/global.scss
+++ b/app/global.scss
@@ -54,7 +54,7 @@ html {
 }
 
 section {
-  padding: 90px 0;
+  padding: 80px 0;
 }
 
 .truncate-text-3 {
@@ -172,8 +172,9 @@ section {
     mix-blend-mode: initial;
     background-image: linear-gradient(
       to bottom,
-      #0000007e 5%,
-      #0000005e 80%,
+      #000000a1 1%,
+      #00000079 20%,
+      #000000b0 70%,
       #0b0c14 100%
     );
     width: max(100% + 0px + 0px, 100%);
@@ -211,4 +212,230 @@ section {
 
 .about-us-list .conetent-wrapper {
   width: calc(100% - 100px);
+}
+.visuallyhidden {
+  clip: rect(1px, 1px, 1px, 1px);
+  height: 1px;
+  overflow: hidden;
+  position: absolute !important;
+  white-space: nowrap;
+  width: 1px;
+}
+
+// =========================
+// Icons
+// =========================
+.icon {
+  fill: var(--color-primary);
+  width: 100%;
+}
+
+// =========================
+// Buttons
+// =========================
+.btn {
+  background-color: var(--color-primary);
+  border: none;
+  border-radius: 0.125rem;
+  color: white;
+  cursor: pointer;
+  font-family: inherit;
+  font-size: inherit;
+  padding: 1rem 2.5rem;
+  transition: transform 0.2s ease;
+
+  &:focus {
+    outline: 3px solid var(--color-focus);
+    outline-offset: 2px;
+  }
+
+  &:active {
+    transform: translateY(1px);
+  }
+}
+
+// =========================
+// Slider controls
+// =========================
+.slider__controls {
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  top: calc(100% + 1rem);
+  width: 100%;
+
+  .btn {
+    --size: 3rem;
+    align-items: center;
+    background-color: transparent;
+    border: 3px solid transparent;
+    border-radius: 50%;
+    display: flex;
+    height: var(--size);
+    width: var(--size);
+    padding: 0;
+
+    &:focus {
+      border-color: var(--color-focus);
+      outline: none;
+    }
+
+    &--previous > * {
+      transform: rotate(180deg);
+    }
+  }
+}
+
+// =========================
+// Slider
+// =========================
+.slider {
+  --slide-size: 70vmin;
+  --slide-margin: 4vmin;
+
+  height: var(--slide-size);
+  margin: 0 auto;
+  position: relative;
+  width: var(--slide-size);
+}
+
+.slider__wrapper {
+  display: flex;
+  margin: 0 calc(var(--slide-margin) * -1);
+  position: absolute;
+  transition: transform 0.5s cubic-bezier(0.25, 1, 0.35, 1);
+}
+
+// =========================
+// Slide
+// =========================
+.slide {
+  align-items: center;
+  color: white;
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  height: var(--slide-size);
+  justify-content: center;
+  margin: 0 var(--slide-margin);
+  opacity: 0.25;
+  position: relative;
+  text-align: center;
+  transition: opacity 0.3s ease, transform 0.3s ease;
+  width: var(--slide-size);
+  z-index: 1;
+
+  &--previous,
+  &--next {
+    &:hover {
+      opacity: 0.5;
+    }
+  }
+
+  &--previous {
+    cursor: w-resize;
+    &:hover {
+      transform: translateX(2%);
+    }
+  }
+
+  &--next {
+    cursor: e-resize;
+    &:hover {
+      transform: translateX(-2%);
+    }
+  }
+}
+
+.slide--current {
+  --x: 0;
+  --y: 0;
+  --d: 50;
+  opacity: 1;
+  pointer-events: auto;
+  user-select: auto;
+
+  &:hover .slide__image-wrapper {
+    transform: scale(1.025)
+      translate(
+        calc(var(--x) / var(--d) * 2px),
+        calc(var(--y) / var(--d) * 2px)
+      );
+  }
+}
+
+.slide__image-wrapper {
+  background-color: var(--color-accent);
+  border-radius: 1%;
+  height: 100%;
+  left: 0;
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  transition: transform 0.25s ease-in-out;
+  width: 100%;
+}
+
+.slide__image {
+  --d: 20;
+  height: 110%;
+  left: -5%;
+  object-fit: cover;
+  opacity: 0;
+  pointer-events: none;
+  position: absolute;
+  top: -5%;
+  transition: opacity 0.5s ease, transform 0.5s ease;
+  width: 110%;
+
+  .slide--current:hover & {
+    transform: translate(
+      calc(var(--x) / var(--d) * 2px),
+      calc(var(--y) / var(--d) * 2px)
+    );
+  }
+}
+
+.slide__headline {
+  font-size: 8vmin;
+  font-weight: 600;
+  position: relative;
+}
+
+.slide__content {
+  opacity: 0;
+  padding: 4vmin;
+  position: relative;
+  transition: transform 0.5s ease;
+  visibility: hidden;
+
+  .slide--current & {
+    animation: fade-in 0.3s ease forwards;
+    visibility: visible;
+  }
+
+  > * + * {
+    margin-top: 2rem;
+  }
+}
+
+// =========================
+// Animations
+// =========================
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.home-thumbnail-swiper {
+  .swiper-wrapper {
+    padding-top: 30px;
+  }
+  .swiper-slide-active {
+    margin-top: -10px;
+  }
 }
