--- a/app/global.scss
+++ b/app/global.scss
@@ -49,8 +49,10 @@ html {
 
 .container {
   width: 100%;
-  max-width: 1290px;
+  max-width: 1170px;
   margin: 0 auto;
+  padding-left: 16px;
+  padding-right: 16px;
 }
 
 section {
@@ -171,17 +173,28 @@ section {
     left: 0;
     mix-blend-mode: initial;
     background-image: linear-gradient(
-      to bottom,
-      #00000032 1%,
-      rgba(255, 0, 0, 0) 20%,
-      #00000000 70%,
-      #0b0c14 100%
+      to left,
+      #00000000 20%,
+      #ff000000 10%,
+      #000000c0 100%
     );
     width: max(100% + 0px + 0px, 100%);
     height: max(100% + 0px + 0px, 100%);
   }
+  &::after {
+    content: '';
+    position: absolute;
+    display: block;
+    z-index: 11;
+    bottom: 0;
+    left: 0;
+    mix-blend-mode: initial;
+    background-image: linear-gradient(to bottom, #00000000 80%, #050b0f 100%);
+    width: max(100% + 0px + 0px, 100%);
+    height: max(100% + 0px + 0px, 100%);
+  }
 }
-
+// #050b0f 100%
 .category-overlay-gradient {
   &::before {
     content: '';
