--- a/app/global.scss
+++ b/app/global.scss
@@ -57,6 +57,9 @@ html {
 
 section {
   padding: 80px 0;
+  @media screen and (max-width: 768px) {
+    padding: 60px 0;
+  }
 }
 
 .truncate-text-3 {
